tested inline style
Added play button

--- a/index.html
+++ b/index.html
@@ -84,12 +84,9 @@
 
                <!-- 3 poster start -->
 
-              <table class="row">
-                <tr>
-                  <td class="center" align="center">
-                    <center>
 
-                      <table class="">
+
+                      <table class="row">
                         <tr>
                           <td class="wrapper last">
 
@@ -133,10 +130,7 @@
                         </tr>
                       </table>
 
-                    </center>
-                  </td>
-                </tr>
-              </table>
+
               <!-- 3 poster END -->
 
 
@@ -191,7 +185,81 @@
                   </td>
                 </tr>
               </table>
+            <table class="row">
+                  <tr>
+                    <td class="wrapper">
 
+                      <table class="eight columns">
+                        <tr>
+                          <td class="left-text-pad">
+                               <h1>Hi User</h1>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Teiusmod tempor incididunt ut labore et.</p>
+
+
+                                <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
+
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
+
+                             <tr>
+                              <td class="sub-grid">
+                                  <table>
+                                    <tr>
+                                      <td class="four sub-columns">
+                                        <table class="button radius">
+                                          <tr>
+                                            <td class="wanna">
+                                              <a href="#">Wanna Watch</a>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                      <td class="four sub-columns">
+
+                                        <table class="button radius">
+                                          <tr>
+                                            <td class="seen">
+                                              <a href="#">Seen it</a>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                      <td class="four sub-columns last">
+
+                                       <table class="button radius">
+                                          <tr>
+                                            <td class="dont">
+                                              <a href="#">Don't Wanna</a>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                    </td>
+                    <td class="wrapper last">
+
+                      <table class="four columns">
+                        <tr>
+                          <td class="right-text-pad center">
+
+                            <img alt="Birdman poster" class="poster center" src="https://image.tmdb.org/t/p/w342/kG1UW1AHGEVj62YSfAiyx1qiVGI.jpg">
+                              <a href="#">Watch Trailer <img src="http://mailannarobinson.files.wordpress.com/2012/12/play-button.png" height="30" width="30" class="play-button center" ></a>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                    </td>
+                  </tr>
+                </table>
 
 
 
@@ -204,9 +272,9 @@
 
                     <table class="twelve columns">
                       <tr>
-                        <td align="center">
+                        <td class="center">
                           <center>
-                            <p style="text-align:center;"><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Unsubscribe</a></p>
+                            <span><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Unsubscribe</a></span>
                           </center>
                         </td>
                         <td class="expander"></td>
