--- a/index.html
+++ b/index.html
@@ -13,32 +13,44 @@
       <tr>
         <td class="center" align="center" valign="top">
           <center>
-            <table class="row header">
-              <tr>
-                <td class="center" align="center">
-                  <center>
-                    <table class="twelve columns">
-                      <tr>
-                        <td class="wrapper last">
-                          <table class="twelve columns">
-                            <tr>
-                              <td class="four sub-columns">
-                              </td>
-                              <td class="four sub-columns">
-                                <img src="images/wanna-logo-email.png">
-                              </td>
-                              <td class="four sub-columns last">
-                              </td>
-                              <td class="expander"></td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                  </center>
-                </td>
-              </tr>
-            </table>
+
+
+          <table class="row header">
+            <tr>
+              <td class="center" align="center">
+                <center>
+
+                  <table class="">
+                    <tr>
+                      <td class="wrapper last">
+
+                        <table class="twelve columns">
+                          <tr>
+
+                            <td class="four sub-columns">
+
+                            </td>
+                            <td class="four sub-columns">
+                             <img src="images/wanna-logo-email.png">
+                            </td>
+
+                            <td class="four sub-columns last">
+
+                            </td>
+                            <td class="expander"></td>
+
+                          </tr>
+                        </table>
+
+                      </td>
+                    </tr>
+                  </table>
+
+                </center>
+              </td>
+            </tr>
+          </table>
+
             <table class="container">
               <tr>
                 <td>
@@ -241,10 +253,11 @@
                   </table>
                   <!-- Unsubscribe - footer END-->
 
-                  <!-- container end below -->
+                  <!-- content end -->
                 </td>
               </tr>
             </table>
+
           </center>
         </td>
       </tr>
