--- a/invite-with-movie.html
+++ b/invite-with-movie.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width"/>
     <link type="text/css" rel="stylesheet" href="ink.css">
-  <style>
-  /* ADD STYLES TO HEAD BEFORE USING INLINER */
-  </style>
-</head>
-<body>
-  <table class="body">
-
-
-    <tr>
-      <td class="center" align="center" valign="top">
-        <center>
+    <style>
+      /* ADD STYLES TO HEAD BEFORE USING INLINER */
+    </style>
+  </head>
+  <body>
+    <table class="body">
+      <tr>
+        <td class="center" align="center" valign="top">
+          <center>
 
           <table class="row header">
             <tr>
@@ -27,14 +25,19 @@
 
                         <table class="twelve columns">
                           <tr>
+
                             <td class="four sub-columns">
+
                             </td>
                             <td class="four sub-columns">
-                              <img src="images/wanna-logo-email.png">
+                             <img src="images/wanna-logo-email.png">
                             </td>
+
                             <td class="four sub-columns last">
+
                             </td>
                             <td class="expander"></td>
+
                           </tr>
                         </table>
 
@@ -47,123 +50,108 @@
             </tr>
           </table>
 
-          <table class="container">
-            <tr>
-              <td>
+            <table class="container">
+              <tr>
+                <td>
+                  <!-- content start -->
 
-          <!-- main content start -->
-
-
-            <table class="row">
-                  <tr>
-                    <td class="wrapper">
-
-                      <table class="eight columns">
-                        <tr>
-                          <td class="left-text-pad">
-                               <h1>Hi User</h1>
+                  <!-- Invite With Movie Start -->
+                  <table class="row">
+                    <tr>
+                      <td class="wrapper">
+                        <table class="eight columns">
+                          <tr>
+                            <td class="left-text-pad">
+                              <h1>Hi User</h1>
                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Teiusmod tempor incididunt ut labore et.</p>
-
-
-                                <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
-
+                              <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
-
-                             <tr>
-                              <td class="sub-grid">
-                                  <table>
-                                    <tr>
-                                      <td class="four sub-columns">
-                                        <table class="button radius">
-                                          <tr>
-                                            <td class="wanna">
-                                              <a href="#">Wanna Watch</a>
-                                            </td>
-                                          </tr>
-                                        </table>
-                                      </td>
-                                      <td class="four sub-columns">
-
-                                        <table class="button radius">
-                                          <tr>
-                                            <td class="seen">
-                                              <a href="#">Seen it</a>
-                                            </td>
-                                          </tr>
-                                        </table>
-                                      </td>
-                                      <td class="four sub-columns last">
-
-                                       <table class="button radius">
-                                          <tr>
-                                            <td class="dont">
-                                              <a href="#">Don't Wanna</a>
-                                            </td>
-                                          </tr>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                  </table>
-                                </td>
-                              </tr>
+                          </tr>
+                          <tr>
+                            <td class="sub-grid">
+                              <table>
+                                <tr>
+                                  <td class="four sub-columns">
+                                    <table class="button">
+                                      <tr>
+                                        <td class="wanna">
+                                          <a href="#">Wanna Watch</a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </td>
+                                  <td class="four sub-columns">
+                                    <table class="button">
+                                      <tr>
+                                        <td class="seen">
+                                          <a href="#">Seen it</a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </td>
+                                  <td class="four sub-columns last">
+                                    <table class="button">
+                                      <tr>
+                                        <td class="dont">
+                                          <a href="#">Don't Wanna</a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                            </td>
+                          </tr>
                           </td>
                           <td class="expander"></td>
-                        </tr>
-                      </table>
-
-                    </td>
-                    <td class="wrapper last">
-
-                      <table class="four columns">
-                        <tr>
-                          <td class="right-text-pad center">
-
-                            <img alt="Birdman poster" class="poster center" src="https://image.tmdb.org/t/p/w342/kG1UW1AHGEVj62YSfAiyx1qiVGI.jpg">
+                          </tr>
+                        </table>
+                      </td>
+                      <td class="wrapper last">
+                        <table class="four columns">
+                          <tr>
+                            <td class="right-text-pad center">
+                              <img alt="Birdman poster" class="poster center" src="https://image.tmdb.org/t/p/w342/kG1UW1AHGEVj62YSfAiyx1qiVGI.jpg">
                               <a href="#">Watch Trailer</a>
-
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-
-                    </td>
-                  </tr>
-                </table>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
 
 
-              <!-- main content end -->
+                  <!-- Invite With Movie END -->
+                  <br>
+                  <br>
+                  <!-- Unsubscribe - footer START-->
+                  <table class="row footer">
+                    <tr>
+                      <td class="wrapper last">
+                        <table class="twelve columns">
+                          <tr>
+                            <td class="center">
+                              <center>
+                                <span><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Unsubscribe</a></span>
+                              </center>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <!-- Unsubscribe - footer END-->
 
+                  <!-- content end -->
+                </td>
+              </tr>
+            </table>
 
-              <br>
-              <br>
-              <!-- Legal + Unsubscribe -->
-              <table class="row footer">
-                <tr>
-                  <td class="wrapper last">
-
-                    <table class="twelve columns">
-                      <tr>
-                        <td class="center">
-                          <center>
-                            <span><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Unsubscribe</a></span>
-                          </center>
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                    </table>
-
-                  </td>
-                </tr>
-              </table>
-
-              <!-- container end below -->
-              </td>
-            </tr>
-          </table>
-
-        </center>
-      </td>
-    </tr>
-  </table>
-</body>
+          </center>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
