--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <td class="center" align="center" valign="top">
           <center>
 
-
+          <!-- CENTERED HEADER START -->
           <table class="row header">
             <tr>
               <td class="center" align="center">
@@ -50,11 +50,14 @@
               </td>
             </tr>
           </table>
+          <!-- CENTERED HEADER END -->
 
             <table class="container">
               <tr>
                 <td>
-                  <!-- content start -->
+                  <!-- content start HEADER FILE ABOVE -->
+
+                  <!-- WELCOME start -->
                   <table class="row">
                     <tr>
                       <td class="wrapper last">
@@ -73,6 +76,64 @@
                             <td class="expander"></td>
                           </tr>
                         </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <!-- WELCOME end -->
+
+
+                  <!-- Full WIDTH BUTTON SUBGRID START  -->
+                  <table class="row">
+                    <tr>
+                      <td class="wrapper last">
+                        <table class="twelve columns">
+                          <tr>
+                            <td class="four sub-columns">
+
+                              <table class="button">
+                                <tr>
+                                  <td class="wanna">
+                                    <a href="#">Wanna Watch</a>
+                                  </td>
+                                </tr>
+                              </table>
+
+                            </td>
+                            <td class="four sub-columns">
+
+                              <table class="button">
+                                <tr>
+                                  <td class="seen">
+                                    <a href="#">Seen It</a>
+                                  </td>
+                                </tr>
+                              </table>
+
+                            </td>
+                            <td class="four sub-columns last">
+
+                              <table class="button">
+                                <tr>
+                                  <td class="dont">
+                                    <a href="#">Dont</a>
+                                  </td>
+                                </tr>
+                              </table>
+
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <!-- BUTTON SUBGRID  END -->
+
+
+                  <!-- PANEL CLASS START -->
+                  <table class="row">
+                    <tr>
+                      <td class="wrapper last">
                         <table class="twelve columns">
                           <tr>
                             <td class="panel">
@@ -84,7 +145,9 @@
                       </td>
                     </tr>
                   </table>
-                  <!-- 3 poster start -->
+                  <!-- PANEL CLASS END -->
+
+                  <!-- 3 POSTER SUB COLUMN START -->
                   <table class="row">
                     <tr>
                       <td class="wrapper last">
@@ -92,6 +155,7 @@
                           <tr>
                             <td class="four sub-columns">
                               <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                               <!-- INLINE BUTTON 100% WIDE START -->
                               <table class="button">
                                 <tr>
                                   <td class="wanna">
@@ -99,9 +163,11 @@
                                   </td>
                                 </tr>
                               </table>
+                                <!-- INLINE BUTTON 100% WIDE END -->
                             </td>
                             <td class="four sub-columns">
                               <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                              <!-- INLINE BUTTON 100% WIDE START -->
                               <table class="button">
                                 <tr>
                                   <td class="seen">
@@ -109,9 +175,11 @@
                                   </td>
                                 </tr>
                               </table>
+                              <!-- INLINE BUTTON 100% WIDE END -->
                             </td>
                             <td class="four sub-columns last">
                               <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                              <!-- INLINE BUTTON 100% WIDE START -->
                               <table class="button">
                                 <tr>
                                   <td class="dont">
@@ -119,6 +187,7 @@
                                   </td>
                                 </tr>
                               </table>
+                              <!-- INLINE BUTTON 100% WIDE END -->
                             </td>
                             <td class="expander"></td>
                           </tr>
@@ -126,8 +195,10 @@
                       </td>
                     </tr>
                   </table>
-                  <!-- 3 poster END -->
-                  <!-- User Centered start -->
+                  <!-- 3 POSTER SUB COLUMN END -->
+
+
+                  <!--  USER ICON Centered start -->
                   <table class="row">
                     <tr>
                       <td class="wrapper last">
@@ -142,7 +213,9 @@
                       </td>
                     </tr>
                   </table>
-                  <!-- User Centered  END -->
+                  <!--  USER ICON Centered END -->
+
+                  <!--  LEFT ICON WITH TEXT START -->
                   <table class="row">
                     <tr>
                       <td class="wrapper last">
@@ -166,6 +239,10 @@
                       </td>
                     </tr>
                   </table>
+                  <!--  LEFT ICON WITH TEXT END -->
+
+
+
                   <!-- Invite With Movie Start -->
                   <table class="row">
                     <tr>
@@ -178,6 +255,7 @@
                               <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
                           </tr>
+                          <!-- NESTED SUBGRID START -->
                           <tr>
                             <td class="sub-grid">
                               <table>
@@ -213,6 +291,7 @@
                               </table>
                             </td>
                           </tr>
+                          <!-- NESTED SUBGRID END -->
                           </td>
                           <td class="expander"></td>
                           </tr>
@@ -234,7 +313,7 @@
                   <!-- Invite With Movie END -->
                   <br>
                   <br>
-                  <!-- Unsubscribe - footer START-->
+                  <!-- Unsubscribe -  START-->
                   <table class="row footer">
                     <tr>
                       <td class="wrapper last">
@@ -251,9 +330,9 @@
                       </td>
                     </tr>
                   </table>
-                  <!-- Unsubscribe - footer END-->
+                  <!-- Unsubscribe -  END-->
 
-                  <!-- content end -->
+                   <!-- content END FOOTER FILE BELOW -->
                 </td>
               </tr>
             </table>
